@@ -3,6 +3,7 @@
 
 Broker:
 - Fixed comment handling for config options that have optional arguments.
+- Improved documentation around bridge topic remapping.
 
 Library:
 - Fix TLS connections not working over SOCKS.
